--- a/portfolio.html
+++ b/portfolio.html
@@ -5,114 +5,130 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html"> <span>Web</span>Studio </a>
+    <header class="header">
+      <nav class="nav">
+        <a href="./index.html" class="logo"> <span class="logo-accent">Web</span>Studio </a>
 
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <ul class="list menu-list">
+          <li class="menu-list-item"><a href="./index.html" class="link menu-list-link">Студия</a></li>
+          <li class="menu-list-item"><a href="" class="link menu-list-link current">Портфолио</a></li>
+          <li class="menu-list-item"><a href="" class="link menu-list-link">Контакты</a></li>
         </ul>
 
-        <div>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <div class="auth">
+          <a href="mailto:info@devstudio.com" class="link auth-link">info@devstudio.com</a>
+          <a href="tel:+380961111111" class="link auth-link">+38 096 111 11 11</a>
         </div>
       </nav>
     </header>
 
     <main>
-      <section>
-        <h1 hidden>Портфолио</h1>
+      <section class="section">
+        <h1 class="section-title" hidden>Портфолио</h1>
 
-        <ul>
-          <li><button type="button">Все</button></li>
-          <li><button type="button">Веб-сайты</button></li>
-          <li><button type="button">Приложения</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+        <ul class="list filter-list">
+          <li class="filter-list-item"><button type="button" class="btn btn-filter">Все</button></li>
+          <li class="filter-list-item"><button type="button" class="btn btn-filter">Веб-сайты</button></li>
+          <li class="filter-list-item"><button type="button" class="btn btn-filter">Приложения</button></li>
+          <li class="filter-list-item"><button type="button" class="btn btn-filter">Дизайн</button></li>
+          <li class="filter-list-item"><button type="button" class="btn btn-filter">Маркетинг</button></li>
         </ul>
 
-        <ul>
-          <li>
+        <ul class="list portfolio-list">
+          <li class="portfolio-list-item">
             <img src="./img/portfolio/img1.jpg" alt="Технокряк" width="370" height="294" />
             <div>
-              <h2>Технокряк</h2>
-              <p>Веб-сайт</p>
+              <h2 class="portfolio-list-title">Технокряк</h2>
+              <p class="portfolio-list-description">Веб-сайт</p>
             </div>
           </li>
-          <li>
+          <li class="portfolio-list-item">
             <img src="./img/portfolio/img2.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294" />
             <div>
-              <h2>Постер New Orlean vs Golden Star</h2>
-              <p>Дизайн</p>
+              <h2 class="portfolio-list-title">Постер New Orlean vs Golden Star</h2>
+              <p class="portfolio-list-description">Дизайн</p>
             </div>
           </li>
-          <li>
+          <li class="portfolio-list-item">
             <img src="./img/portfolio/img3.jpg" alt="Ресторан Seafood" width="370" height="294" />
             <div>
-              <h2>Ресторан Seafood</h2>
-              <p>Приложение</p>
+              <h2 class="portfolio-list-title">Ресторан Seafood</h2>
+              <p class="portfolio-list-description">Приложение</p>
             </div>
           </li>
-          <li>
+          <li class="portfolio-list-item">
             <img src="./img/portfolio/img4.jpg" alt="Проект Prime" width="370" height="294" />
             <div>
-              <h2>Проект Prime</h2>
-              <p>Маркетинг</p>
+              <h2 class="portfolio-list-title">Проект Prime</h2>
+              <p class="portfolio-list-description">Маркетинг</p>
             </div>
           </li>
-          <li>
+          <li class="portfolio-list-item">
             <img src="./img/portfolio/img5.jpg" alt="Проект Boxes" width="370" height="294" />
             <div>
-              <h2>Проект Boxes</h2>
-              <p>Приложение</p>
+              <h2 class="portfolio-list-title">Проект Boxes</h2>
+              <p class="portfolio-list-description">Приложение</p>
             </div>
           </li>
-          <li>
+          <li class="portfolio-list-item">
             <img src="./img/portfolio/img6.jpg" alt="Inspiration has no Borders" width="370" height="294" />
             <div>
-              <h2>Inspiration has no Borders</h2>
-              <p>Веб-сайт</p>
+              <h2 class="portfolio-list-title">Inspiration has no Borders</h2>
+              <p class="portfolio-list-description">Веб-сайт</p>
             </div>
           </li>
-          <li>
+          <li class="portfolio-list-item">
             <img src="./img/portfolio/img7.jpg" alt="Издание Limited Edition" width="370" height="294" />
             <div>
-              <h2>Издание Limited Edition</h2>
-              <p>Дизайн</p>
+              <h2 class="portfolio-list-title">Издание Limited Edition</h2>
+              <p class="portfolio-list-description">Дизайн</p>
             </div>
           </li>
-          <li>
+          <li class="portfolio-list-item">
             <img src="./img/portfolio/img8.jpg" alt="Проект LAB" width="370" height="294" />
             <div>
-              <h2>Проект LAB</h2>
-              <p>Маркетинг</p>
+              <h2 class="portfolio-list-title">Проект LAB</h2>
+              <p class="portfolio-list-description">Маркетинг</p>
             </div>
           </li>
-          <li>
+          <li class="portfolio-list-item">
             <img src="./img/portfolio/img9.jpg" alt="" width="370" height="294" />
             <div>
-              <h2>Growing Business</h2>
-              <p>Приложение</p>
+              <h2 class="portfolio-list-title">Growing Business</h2>
+              <p class="portfolio-list-description">Приложение</p>
             </div>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <a href="./index.html"> <span>Web</span>Studio </a>
+    <footer class="footer">
+      <a href="./index.html" class="logo"> <span class="logo-accent">Web</span>Studio </a>
 
-      <address>
-        <a href="https://goo.gl/maps/CX2gi69ugpHJVUcX7" target="_blank" rel="noopener noreferrer"
-          >г. Киев, пр-т Леси Украинки, 26</a
-        >
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <address class="address">
+        <ul class="list address-list">
+          <li class="address-list-item">
+            <a
+              href="https://goo.gl/maps/CX2gi69ugpHJVUcX7"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="link address-list-link address-link"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
+          <li class="address-list-item">
+            <a href="mailto:info@devstudio.com" class="link address-list-link">info@devstudio.com</a>
+          </li>
+          <li class="address-list-item">
+            <a href="tel:+380961111111" class="link address-list-link">+38 096 111 11 11</a>
+          </li>
+        </ul>
       </address>
     </footer>
   </body>
