--- a/index.html
+++ b/index.html
@@ -83,28 +83,28 @@
             <img src="./img/team/img1.jpg" alt="Игорь Демьяненко" width="270" height="260" />
             <div>
               <h3 class="team-list-title">Игорь Демьяненко</h3>
-              <p lang="en">Product Designer</p>
+              <p lang="en" class="team-list-position">Product Designer</p>
             </div>
           </li>
           <li class="team-list-item">
             <img src="./img/team/img2.jpg" alt="Ольга Репина" width="270" height="260" />
             <div>
               <h3 class="team-list-title">Ольга Репина</h3>
-              <p lang="en">Frontend Developer</p>
+              <p lang="en" class="team-list-position">Frontend Developer</p>
             </div>
           </li>
           <li class="team-list-item">
             <img src="./img/team/img3.jpg" alt="Николай Тарасов" width="270" height="260" />
             <div>
               <h3 class="team-list-title">Николай Тарасов</h3>
-              <p lang="en">Marketing</p>
+              <p lang="en" class="team-list-position">Marketing</p>
             </div>
           </li>
           <li class="team-list-item">
             <img src="./img/team/img4.jpg" alt="Михаил Ермаков" width="270" height="260" />
             <div>
               <h3 class="team-list-title">Михаил Ермаков</h3>
-              <p lang="en">UI Designer</p>
+              <p lang="en" class="team-list-position">UI Designer</p>
             </div>
           </li>
         </ul>
